--- a/Algoritmo Genetico.html
+++ b/Algoritmo Genetico.html
@@ -1,106 +1,155 @@
 <html>
-  <head>
+<head>
     <title> Algoritmo Genetico </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <meta content="">
-    <style></style>
-  </head>
-  <body>
-  <div id="console"></div>
-  </body>
-<script src="realRandoms.js"></script>
-<script type="text/javascript">
+    <style>
+        canvas{
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+        }
+    </style>
+    <!-- chartjs !-->
 
 
-    var generaciones = 0;
-    var generacionesParo = 20;
-    var cout = '';
-    Poblacion = [];
+</head>
 
+<body>
+<script src="Utils.js"></script>
+<script src="Chart.bundle.js"></script>
+<script  src="algoritmoGenetico.js" type="text/javascript"></script>
 
-Datalog = function(){
- var consoleItem = document.getElementById('console');
- consoleItem.textContent = cout;
- cout = '';
-}
+<div style="width:80%;">
+    <canvas id="canvas"></canvas>
+</div>
+<br>
+<br>
 
+<button id="prevGen" style="margin-bottom: 50px; background-color: crimson; color: whitesmoke; border: none;
 
-//////////////////////Funcion Objetivo/////////////////////////
-///////////////////////////////////////////////////////////////
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bolder;
+    border-radius: 10pt;
+    font-size: 16px;">Prev Gen</button>
 
-fobjetivo = function (x) {
- return (Math.pow(x,4) + Math.pow(5*x,4) + Math.pow(x,4) -4*x +1)+20;
-}
+<button id="nextGen" style="margin-bottom: 50px; background-color: #4bc0c0; color: whitesmoke; border: none;
 
-/////////////////////////Gen Utilities/////////////////////////
-///////////////////////////////////////////////////////////////
-genDecoder = function (genes) {
-    /*ParseInt ya tiene el parametro de base sobrecargado*/
-    var decodedGenome = parseInt( genes,2 );
-    return decodedGenome;
-}
-decodedGentoArrRes = function (_decodedGenome) {
-        var r = (-4 + _decodedGenome *0.2); /*Resulados en el grupo valido*/
-        return Math.abs(Math.round(r));
-}
-genEncoder = function(dec){
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bolder;
+    border-radius: 10pt;
+    font-size: 16px;">Next Gen</button><br/>
+<hr/>
+<br/><br/>
+Open Data (Json):
+<textarea id="jsonData" style="width: 90vw;height: 90vh;"></textarea>
+<script>
 
-    var binario = (dec >>> 0).toString(2);
-    var ceros = 4 - binario.length;
-    var r = '';
-    for (j = ceros; j!==0; j--){
-        r += '0';
+    var MONTHS = [];
+    var chrtIndex = 1;
+    for(var z = 0; z<16;z++){
+        MONTHS.push(""+z+": "+decodedGentoArrRes(z));
     }
-    r += binario;
+    var config = {
+        type: 'line',
+        data: {
+            labels: MONTHS,
+            datasets: [{
+                label: "Individuos Gen "+ chrtIndex,
+                backgroundColor: "rgba(75, 192, 192,0.5)"   ,
+                borderColor: window.chartColors.green,
+                data: GenerationRecord[chrtIndex].data.resume,
+                fill: true
+            }]
+        },
+        options: {
+            responsive: true,
+            title:{
+                display:true,
+                text:'Generaciones Algoritmo Genetico'
+            },
+            tooltips: {
+                mode: 'index',
+                intersect: false,
+            },
+            hover: {
+                mode: 'nearest',
+                intersect: true
+            },
+            scales: {
+                xAxes: [{
+                    display: true,
+                    scaleLabel: {
+                        display: true,
+                        labelString: 'Genes'
+                    }
+                }],
+                yAxes: [{
+                    display: true,
+                    scaleLabel: {
+                        display: true,
+                        labelString: 'Individuos'
+                    }
+                }]
+            }
+        }
+    };
 
-    console.log('Dec = ' + dec + ' Bin = ' + r);
+    window.onload = function() {
+        var ctx = document.getElementById("canvas").getContext("2d");
+        window.myLine = new Chart(ctx, config);
+    };
 
-    return r;
-}
-function getRandomInt(min, max) {
+    document.getElementById('nextGen').addEventListener('click', function() {
+        if(chrtIndex <20){
+            chrtIndex++;
 
-    var array = new Uint8Array(1);
-    window.crypto.getRandomValues(array);
-       // console.log('Crypt rand = ' + array[0]);
-    rand =  Math.random() * (max - min + 1) + min;
-   // console.log('basic rand = ' + Math.abs(Math.floor(rand)));
-    return Math.abs(rand);
+            var newColor = window.chartColors.green
+            var newDataset = datasets = {
+                label: "Individuos Gen "+ chrtIndex,
+                backgroundColor: "rgba(75, 192, 192,0.5)"    ,
+                borderColor: window.chartColors.green,
+                data: GenerationRecord[chrtIndex].data.resume,
+                fill: true
+            };
 
-}
-///////////////////////////////////////////////////////////////
-///////////////////////////////////////////////////////////////
+            config.data.datasets = [];
+            config.data.datasets.push(newDataset);
+            window.myLine.update();
+        }
+    });
+    document.getElementById('prevGen').addEventListener('click', function() {
+        if(chrtIndex > 0){
+            chrtIndex--;
+
+            var newColor = window.chartColors.green
+            var newDataset = datasets = {
+                label: "Individuos Gen "+ chrtIndex,
+                backgroundColor: "rgba(75, 192, 192,0.5)"    ,
+                borderColor: window.chartColors.green,
+                data: GenerationRecord[chrtIndex].data.resume,
+                fill: true
+            };
+
+            config.data.datasets = [];
+            config.data.datasets.push(newDataset);
+            window.myLine.update();
+        }
+    });
 
 
-//////////////////////Clase individuo//////////////////////////
-///////////////////////////////////////////////////////////////
-Individuo = function (_gens) {
-    this.genes = _gens;
-    this._dec_gen = genDecoder(this.genes);
-    this.getFitness = fobjetivo(decodedGentoArrRes(this._dec_gen));
-}
-
-///////////////////////////////////////////////////////////////
-///////////////////////////////////////////////////////////////
-
-  PoblacionInicial = [];
-
-/*Genera poblacion inicial aleatoriamente*/
-  for(i = 0; i < 15; i++)
-  {
-      randomInd = parseInt(getRandomInt(0,14));
-      genAleat = genEncoder(randomInd);
-      PoblacionInicial.push( new Individuo(genAleat));
-  }
-
-  Poblacion = PoblacionInicial;
-
-  /**Rutina principal*/
-  while (generaciones++ <= generacionesParo){
-      Poblacion.sort(function(a,b){return a.getFitness -b.getFitness});
-      cout += JSON.stringify(Poblacion);
-      Datalog();
-  }
-
+    document.getElementById('jsonData').textContent = JSON.stringify(GenerationRecord);
 
 </script>
+
+</body>
+
+
 
 </html>
