--- a/Algoritmo Genetico.html
+++ b/Algoritmo Genetico.html
@@ -9,6 +9,10 @@
             -webkit-user-select: none;
             -ms-user-select: none;
         }
+        textarea {
+            resize: none;
+            width: 100% !important;
+        }
     </style>
     <!-- chartjs !-->
 
