--- a/Algoritmo Genetico.html
+++ b/Algoritmo Genetico.html
@@ -116,7 +116,7 @@ Open Data (Json):
 
             var newColor = window.chartColors.green
             var newDataset = datasets = {
-                label: "Individuos Gen "+ chrtIndex,
+                label: "Individuos Gen "+ fobjetivo(chrtIndex),
                 backgroundColor: "rgba(75, 192, 192,0.5)"    ,
                 borderColor: window.chartColors.green,
                 data: GenerationRecord[chrtIndex].data.resume,
