--- a/Algoritmo Genetico.html
+++ b/Algoritmo Genetico.html
@@ -49,6 +49,9 @@
     font-weight: bolder;
     border-radius: 10pt;
     font-size: 16px;">Next Gen</button><br/>
+  <div style="width:80%;">
+        <canvas id="canvas2"></canvas>
+        </div>
 <hr/>
 <br/><br/>
 Open Data (Json):
@@ -56,9 +59,12 @@ Open Data (Json):
 <script>
 
     var MONTHS = [];
-    var chrtIndex = 1;
+    var chrtIndex = 0;
     for(var z = 0; z<16;z++){
-        MONTHS.push(""+z+": "+decodedGentoArrRes(z));
+       var a = -4 +(z*0.2);
+       var b = fobjetivo(a);
+       b = Math.round(b * 100) / 100;
+        MONTHS.push(""+ b);
     }
     var config = {
         type: 'line',
@@ -91,7 +97,7 @@ Open Data (Json):
                     display: true,
                     scaleLabel: {
                         display: true,
-                        labelString: 'Genes'
+                        labelString: 'Fitness'
                     }
                 }],
                 yAxes: [{
@@ -104,19 +110,81 @@ Open Data (Json):
             }
         }
     };
+////////////////////////////////////////////////////////
+var resXaxis = ["-4.0","-3.8","-3.6","-3.4","-3.2",
+                "-3.0","-2.8","-2.6","-2.4","-2.2",
+                "-2.0","-1.8","-1.6","-1.4","-1.2","-1.0"];
 
+plotData = [];
+
+for(var z = 0; z<16;z++){
+   var a = -4 +(z*0.2);
+   var b = fobjetivo(a);
+   b = Math.round(b * 100) / 100;
+    plotData.push(""+ b);
+}
+
+var config2 = {
+    type: 'line',
+    data: {
+        labels: resXaxis,
+        datasets: [{
+            label: "Generacion "+ chrtIndex,
+            backgroundColor: "rgba(75, 192, 192,0.5)"   ,
+            borderColor: window.chartColors.green,
+            data: plotData ,
+            fill: false
+        }]
+    },
+    options: {
+        responsive: true,
+        title:{
+            display:false,
+            text:''
+        },
+        tooltips: {
+            mode: 'index',
+            intersect: true,
+        },
+        hover: {
+            mode: 'nearest',
+            intersect: true
+        },
+        scales: {
+            xAxes: [{
+                display: true,
+                scaleLabel: {
+                    display: true,
+                    labelString: 'x'
+                }
+            }],
+            yAxes: [{
+                display: true,
+                scaleLabel: {
+                    display: true,
+                    labelString: 'y'
+                }
+            }]
+        }
+    }
+};
+
+///////////////////////////////////////////////////////
     window.onload = function() {
         var ctx = document.getElementById("canvas").getContext("2d");
         window.myLine = new Chart(ctx, config);
+
+        var ctx2 = document.getElementById("canvas").getContext("2d");
+        window.myLine2 = new Chart(ctx2, config2);
     };
 
     document.getElementById('nextGen').addEventListener('click', function() {
-        if(chrtIndex <20){
+        if(chrtIndex <50){
             chrtIndex++;
 
             var newColor = window.chartColors.green
             var newDataset = datasets = {
-                label: "Individuos Gen "+ fobjetivo(chrtIndex),
+                label: "Generacion "+chrtIndex,
                 backgroundColor: "rgba(75, 192, 192,0.5)"    ,
                 borderColor: window.chartColors.green,
                 data: GenerationRecord[chrtIndex].data.resume,
