--- a/Algoritmo Genetico.html
+++ b/Algoritmo Genetico.html
@@ -58,6 +58,15 @@ Open Data (Json):
 <textarea id="jsonData" style="width: 90vw;height: 90vh;"></textarea>
 <script>
 
+plotData = [];
+
+for(var z = 0; z<16;z++){
+   var a = -4 +(z*0.2);
+   var b = fobjetivo(a);
+   b = Math.round(b * 100) / 100;
+    plotData.push(""+ (b*2)-1);
+}
+
     var MONTHS = [];
     var chrtIndex = 0;
     for(var z = 0; z<16;z++){
@@ -76,9 +85,16 @@ Open Data (Json):
                 borderColor: window.chartColors.green,
                 data: GenerationRecord[chrtIndex].data.resume,
                 fill: true
+            },{
+                label: "Func Objetivo",
+                backgroundColor: "rgba(220, 20, 6,0.5)"   ,
+                borderColor: "rgba(220, 20, 6,0.5)" ,
+                data: plotData ,
+                fill: false
             }]
         },
         options: {
+          animation: false,
             responsive: true,
             title:{
                 display:true,
@@ -110,89 +126,36 @@ Open Data (Json):
             }
         }
     };
-////////////////////////////////////////////////////////
-var resXaxis = ["-4.0","-3.8","-3.6","-3.4","-3.2",
-                "-3.0","-2.8","-2.6","-2.4","-2.2",
-                "-2.0","-1.8","-1.6","-1.4","-1.2","-1.0"];
 
-plotData = [];
-
-for(var z = 0; z<16;z++){
-   var a = -4 +(z*0.2);
-   var b = fobjetivo(a);
-   b = Math.round(b * 100) / 100;
-    plotData.push(""+ b);
-}
-
-var config2 = {
-    type: 'line',
-    data: {
-        labels: resXaxis,
-        datasets: [{
-            label: "Generacion "+ chrtIndex,
-            backgroundColor: "rgba(75, 192, 192,0.5)"   ,
-            borderColor: window.chartColors.green,
-            data: plotData ,
-            fill: false
-        }]
-    },
-    options: {
-        responsive: true,
-        title:{
-            display:false,
-            text:''
-        },
-        tooltips: {
-            mode: 'index',
-            intersect: true,
-        },
-        hover: {
-            mode: 'nearest',
-            intersect: true
-        },
-        scales: {
-            xAxes: [{
-                display: true,
-                scaleLabel: {
-                    display: true,
-                    labelString: 'x'
-                }
-            }],
-            yAxes: [{
-                display: true,
-                scaleLabel: {
-                    display: true,
-                    labelString: 'y'
-                }
-            }]
-        }
-    }
-};
-
-///////////////////////////////////////////////////////
     window.onload = function() {
         var ctx = document.getElementById("canvas").getContext("2d");
         window.myLine = new Chart(ctx, config);
 
-        var ctx2 = document.getElementById("canvas").getContext("2d");
-        window.myLine2 = new Chart(ctx2, config2);
     };
 
     document.getElementById('nextGen').addEventListener('click', function() {
-        if(chrtIndex <50){
+        if(chrtIndex <20){
             chrtIndex++;
 
             var newColor = window.chartColors.green
-            var newDataset = datasets = {
-                label: "Generacion "+chrtIndex,
-                backgroundColor: "rgba(75, 192, 192,0.5)"    ,
+            var newDataset ={
+                label: "Individuos Gen "+ chrtIndex,
+                backgroundColor: "rgba(75, 192, 192,0.5)"   ,
                 borderColor: window.chartColors.green,
                 data: GenerationRecord[chrtIndex].data.resume,
                 fill: true
             };
+              var newDataset2 ={
+                label: "Func Objetivo",
+                backgroundColor: "rgba(220, 20, 6,0.5)"   ,
+                borderColor: "rgba(220, 20, 6,0.5)" ,
+                data: plotData ,
+                fill: false
+            };
 
             config.data.datasets = [];
             config.data.datasets.push(newDataset);
+            config.data.datasets.push(newDataset2);
             window.myLine.update();
         }
     });
@@ -201,17 +164,26 @@ var config2 = {
             chrtIndex--;
 
             var newColor = window.chartColors.green
-            var newDataset = datasets = {
+            var newDataset ={
                 label: "Individuos Gen "+ chrtIndex,
-                backgroundColor: "rgba(75, 192, 192,0.5)"    ,
+                backgroundColor: "rgba(75, 192, 192,0.5)"   ,
                 borderColor: window.chartColors.green,
                 data: GenerationRecord[chrtIndex].data.resume,
                 fill: true
             };
+              var newDataset2 ={
+                label:"Func Objetivo",
+                backgroundColor: "rgba(220, 20, 6,0.5)"   ,
+                borderColor: "rgba(220, 20, 6,0.5)" ,
+                data: plotData ,
+                fill: false
+            };
 
             config.data.datasets = [];
             config.data.datasets.push(newDataset);
+            config.data.datasets.push(newDataset2);
             window.myLine.update();
+
         }
     });
 
